Add comprehensive dotfiles cleanup guide and fix doc isolation
1. DOTFILES_CLEANUP.md (Complete Analysis)
   - Audited all 59 dotfiles in home directory
   - Categorized: XDG-compliant, must-stay, can-move, should-delete
   - Identified 20 hardcoded dotfiles that cannot move (SSH, shells, Docker, etc.)
   - Documented 30+ apps that should move to ~/.local/share/
   - Realistic cleanup: 59 → ~25 essential dotfiles
   - Safe cleanup commands provided

2. Updated .chezmoiignore
   - Added all documentation files (README, guides, etc.)
   - Prevents repository docs from appearing in home directory
   - Keeps docs in repo only (proper separation)

3. Performed Safe Cleanup
   - Removed 2 backup files (.zshrc.backup, .claude.json.backup)
   - Removed 4 doc files from home (now repository-only)
   - Current dotfile count: 57 (down from 59)
   - Clean home root: ✅ (no stray files)

Key Findings:
- Cannot move: ~/.ssh/, ~/.zshrc, ~/.docker/, ~/.npm/, ~/.kube/, etc. (hardcoded)
- Should move: ~30 app data folders to ~/.local/share/
- Already XDG: ~/.config/, ~/.local/, ~/.cache/ ✅
- Realistic goal: ~25 essential dotfiles (from 59)
- Documentation: Complete migration guide with safe commands

Status: Home directory significantly cleaner, with clear path for further cleanup

--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -22,3 +22,12 @@ work_scripts/
 *.swp
 *.swo
 *~
+
+# Repository documentation (don't apply to home directory)
+README.md
+1PASSWORD_SETUP.md
+ORGANIZATION_STRATEGY.md
+ORGANIZATION_QUICKSTART.md
+EXTERNAL_DRIVE.md
+PLUGINS.md
+DOTFILES_CLEANUP.md
